2010-02-09  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1022.xml, printer/HP-LaserJet_1022n.xml,
	  printer/HP-LaserJet_1022nw.xml: Added "n" and "nw" versions
	  of the HP LaserJet 1022 so that printer setup tools choose
	  the recommended "foo2zjs" driver instead of HPLIP for these
	  printers (Ubuntu bug #250872).

	* driver/foo2qpdl.xml, driver/pxlcolor.xml, driver/splix.xml,
	  printer/Samsung-CLP-610ND.xml: The Samsung CLP-610ND is a PCL-XL
	  printer but does not work with "pxlcolor" due to firmware
	  bugs. Assigned to SPL-2 drivers and removed "pclcolor"
	  assignment (Ubuntu bugs #505423, #510832).

2010-02-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Corrected PPD keyword: It must read
	  "*FoomaticRIPNoPageAccounting" and not "*FoomaticNoPageAccounting".

2010-02-01  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml, driver/lm1100.xml, driver/min12xxw.xml:
	  Added "<packages>" tags for all drivers for which LSB-based binary
	  packages are provided. The new OpenPrinting web site needs these
	  tags.

	* README: Updated the documentation for the <packages> tags
	  telling that they are now required if binary packages of the
	  driver are are provided.

2010-01-18  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Lexmark-C780.xml,
	  db/source/printer/Lexmark-C782.xml,
	  db/source/printer/Lexmark-C930.xml,
	  db/source/printer/Lexmark-C935.xml,
	  db/source/printer/Lexmark-X940e.xml,
	  db/source/printer/Lexmark-X945e.xml: Export of all XML files from
	  the MySQL database for testing of BZR writing from the web
	  app. This reformatted some files which got imported via the BZR
	  repository.

2009-12-26  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Added more instructions for the <packages> tags in driver
	  XML files.

2009-12-18  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C510b.xml, printer/Lexmark-C752b.xml: Moved the