@@ -17,10 +17,13 @@
     </text>
   </lang>
   <functionality>A</functionality>
-  <driver>pxlmono</driver>
+  <driver>hpijs-pcl5e</driver>
   <drivers>
     <driver>
       <id>gutenprint</id>
+    </driver>
+    <driver>
+      <id>hpijs-pcl5e</id>
     </driver>
     <driver>
       <id>lj4dith</id>
@@ -37,9 +40,15 @@
   </drivers>
   <comments>
     <en>
-      Works fine with plxmono up to 600x600
+
+      This is a PCL-XL printer but using it with "pxlmono" does not
+      work reliably, probably due to firmware incompatibility. See
+      &lt;a href="https://bugs.launchpad.net/bugs/504841"&gt;this bug
+      report&lt;/a&gt;. So best choice is the HPLIP driver
+      "hpijs-pcl5e".&lt;p&gt;
       
       Foomatic entry made by PPDtoXML T/G 0.20 on 2008-09-06
-      </en>
+
+    </en>
   </comments>
 </printer>
