@@ -1,5 +1,9 @@
 2010-02-09  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* printer/Canon-LBP-3360.xml: Changed recommended driver to
+	  "hpijs-pcl5e" as the former default driver "pxlmono"
+	  produced broken printouts (Ubuntu bug #504841).
+
 	* printer/HP-LaserJet_1022.xml, printer/HP-LaserJet_1022n.xml,
 	  printer/HP-LaserJet_1022nw.xml: Added "n" and "nw" versions
 	  of the HP LaserJet 1022 so that printer setup tools choose
